# mcp-paint-agent

./: .env.example  README.md  main.py  paint_app.py  paint_server.py  pyproject.toml  requirements.txt  talk2mcp.py
Reference_code/: decorator.py  example2.py  talk2mcp.py
prefab/: README.md
prefab/00_prelesson/: README.md  counter.py
prefab/01_hello_prefab/: README.md  hello.py
prefab/02_state_and_events/: README.md  counter.py
prefab/03_prefab_in_mcp/: README.md  server.py
prefab/04_talk_to_app/: .last_good_app.py  README.md  generated_app.py  prompt_to_app.py
